--- a/taskfiles/Taskfile-common.yml.hbs
+++ b/taskfiles/Taskfile-common.yml.hbs
@@ -11,6 +11,11 @@ tasks:
 
   markdown-link-check:
     desc: Scan markdown files for broken links
+    summary: |
+      $ Report any broken links in the files that end with .md
+
+      This task uses the npm package called markdown-link-check to scan all the links
+      and then report which ones are broken.
     cmds:
       - npm run misc:markdown-links
 
