Update taskfiles/Taskfile-common.yml.hbs, taskfiles/Taskfile-ansible.yml.hbs, taskfiles/Taskfile-fix.yml.hbs, taskfiles/Taskfile-lint.yml.hbs, taskfiles/Taskfile-test.yml.hbs, scripts/software.sh files

--- a/taskfiles/Taskfile-fix.yml.hbs
+++ b/taskfiles/Taskfile-fix.yml.hbs
@@ -2,6 +2,11 @@
 version: '3'
 
 tasks:
+
+  all:
+    desc: Apply automatic code formatting techniques (Prettier, Black, and Shellcheck)
+    deps: [fix-formatting, {{#if hbs.python}}fix-python, {{/if}}fix-scripts]
+
   formatting:
     desc: Automatically format most files using Prettier
     cmds:
