--- a/taskfiles/Taskfile-lint.yml.hbs
+++ b/taskfiles/Taskfile-lint.yml.hbs
@@ -2,6 +2,9 @@
 version: '3'
 
 tasks:
+  all:
+    desc: Lint the project by running all the linters in parallel
+    deps: [lint:formatting{{#if hbs.ansible}} ,lint:ansible{{/if}}{{#if hbs.dockerfile}}, lint:docker{{/if}}{{#if hbs.python}}, lint-python{{/if}}{{#if hbs.yaml}}, lint-yaml{{/if}}]
 {{#if hbs.ansible}}
 
   ansible:
@@ -32,7 +35,7 @@ tasks:
       - find . -type d \\( -name .cache -o -name .common -o -name .git -o -name .modules \
         -o -name node_modules -o -name .husky -o -name .task -o -name test \\) -prune -o \
         -type f \\( -name Dockerfile -o -name Dockerfile.j2 \\) -print0 | xargs -0 -r -n1 \
-        docker run -v ${PWD}:/work -w /work megabytelabs/hadolint:slim
+        docker run -v "$PWD:/work" -w /work megabytelabs/hadolint:slim
     sources:
       - ./**Dockerfile
       - ./**Dockerfile.j2
