--- a/taskfiles/Taskfile-ansible.yml.hbs
+++ b/taskfiles/Taskfile-ansible.yml.hbs
@@ -82,7 +82,7 @@ tasks:
         vars:
           MODULE: community.general.homebrew
           ROLE: \{{.GALAXY_NAMESPACE}}.homebrew
-          VAL: {"role": "\{{.GALAXY_NAMESPACE}.homebrew", "when": "ansible_os_family == \"Darwin\""}
+          VAL: {"role": "\{{.GALAXY_NAMESPACE}}.homebrew", "when": "ansible_os_family == \"Darwin\""}
       - task: _populate-meta
         vars:
           MODULE: community.general.npm
@@ -110,7 +110,7 @@ tasks:
     cmds:
       - |
         if [ "\{{.REFERENCES}}" ] && [[ ! "\{{.COLLECTIONS}}" =~ "\{{.COLLECTION}}" ]] && [ ! ("\{{.IS_SNAP}}" && "\{{.ROLE}}" == "\{{.GALAXY_NAMESPACE}}.snapd") ]; then
-            yq eval -i -P '.collections = .collections + {{.VAL}}' requirements.yml
+            yq eval -i -P '.collections = .collections + \{{.VAL}}' requirements.yml
             TMP=$(mktemp)
             (echo "---" && cat requirements.yml) > $TMP
             mv $TMP requirements.yml
