--- a/taskfiles/Taskfile-common.yml.hbs
+++ b/taskfiles/Taskfile-common.yml.hbs
@@ -26,7 +26,7 @@ tasks:
     summary: |
       $ Report any broken links in the files that end with .md
 
-      This task uses the npm package called markdown-link-check to scan all the links
+      This task uses the npm package called `markdown-link-check` to scan all the links
       and then report which ones are broken.
     cmds:
       - npm run misc:markdown-links
