--- a/taskfiles/Taskfile-common.yml.hbs
+++ b/taskfiles/Taskfile-common.yml.hbs
@@ -168,7 +168,7 @@ tasks:
   update-all:
     deps: [update-contributing, update-readme{{#if hbs.role}}-role{{/if}}, update-files]
 
-  update-readme-role
+  update-readme-role:
     deps: [_ansible-autodoc, _ansibler]
     cmds:
       - task: update-readme
