--- a/package.json.handlebars
+++ b/package.json.handlebars
@@ -4,6 +4,7 @@
   "license": "{{license}}",
   "author": "{{author.name}} <{{author.email}}> ({{link.home}})",
   "homepage": "{{link.home}}",
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "git+{{repo}}.git"
@@ -35,12 +36,14 @@
     "cspell": "^5.6.6",
     "cz-conventional-changelog": "^3.3.0",
     "husky": "^6.0.0",
+    "inquirer": "^6.5.2",
     "lint-staged": "^11.0.0",
     "markdown-link-check": "^3.8.7",
     "prettier": "^2.3.1",
     "prettier-package-json": "^2.6.0",
     "prettier-plugin-sh": "^0.6.1",
     "shellcheck": "^1.0.0",
+    "signale": "^1.4.0",
     "standard-version": "^9.3.0"
   },
   "engines": {
