--- a/taskfiles/Taskfile-common.yml.handlebars
+++ b/taskfiles/Taskfile-common.yml.handlebars
@@ -91,13 +91,16 @@ tasks:
   shell:
     desc: Start a terminal session using Docker with any Linux operating system
     summary: |
-      Start a Docker terminal session
+      $ Start a Docker terminal session
 
       Use Docker to run commands on nearly any operating system. The operating
       systems are all stock distros with systemd added.
 
-      Example usage:
-      task shell -- ubuntu-21.04
+      Example of opening an interactive prompt:
+      > task shell
+
+      Example of directly shelling into a container:
+      > task shell -- ubuntu-21.04
 
       Available operating systems:
       archlinux, centos-7, centos-8, debian-9, debian-10, fedora-33, fedora-34,
@@ -113,11 +116,11 @@ tasks:
 
   spelling:
     desc: Checks for spelling errors in staged files
-    vars:
+    env:
       STAGED_FILES:
         sh: git diff --cached --name-only
     cmds:
-      - npx cspell --no-summary --no-progress --show-context --no-must-find-files --config .common/.cspell.json \{{.STAGED_FILES}} || true
+      - npx cspell --no-summary --no-progress --show-context --no-must-find-files --config .common/.cspell.json "$STAGED_FILES" || true
     preconditions:
       - sh: "git diff --cached --name-only"
         msg: "Cannot perform a spell check because there are no staged files"
@@ -138,23 +141,26 @@ tasks:
       - task: update-all
 
   update-variables:
-    vars:
+    env:
       BLUEPRINT_DATA:
         sh: jq -r '.blueprint' package.json
+      TMP_JQ:
+        sh: mktemp
+      TMP_VARS:
+        sh: mktemp
+    vars:
       COMMON_JSON: ".common/common.\{{.REPOSITORY_SUBTYPE}}.json"
     cmds:
-      - TMP="$(mktemp)"
-      - jq -S --arg blueprint "\{{.BLUEPRINT_DATA}}" '. = . * ($blueprint | fromjson)' ".common/variables.\{{.REPOSITORY_SUBTYPE}}.json" > "$TMP"
-      - mv "$TMP" .variables.json
+      - jq -S --arg blueprint "$BLUEPRINT_DATA" '. = . * ($blueprint | fromjson)' ".common/variables.\{{.REPOSITORY_SUBTYPE}}.json" > "$TMP_VARS"
+      - mv "$TMP_VARS" .variables.json
 {{#if hbs.role}}
       - DESCRIPTION=$(yq e '.galaxy_info.description' meta/main.yml)
       - LOWERCASE_DESC=$(echo ${DESCRIPTION:0:1} | tr '[A-Z]' '[a-z]')${DESCRIPTION:1}
       - SUBHEADER_DESCRIPTION="An Ansible role that ${LOWERCASE_DESC}"
       - ALT_DESCRIPTION="This repository is the home of an [Ansible](https://www.ansible.com/) role that ${LOWERCASE_DESCRIPTION}."
-      - TMP="$(mktemp)"
       - jq -S --arg subheader "$SUBHEADER_DESCRIPTION" --arg alt "$ALT_DESCRIPTION"
-          '.subheader_description = $subheader | .alternative_description = $alt' .variables.json > "$TMP"
-      - mv "$TMP" .variables.json
+          '.subheader_description = $subheader | .alternative_description = $alt' .variables.json > "$TMP_JQ"
+      - mv "$TMP_JQ" .variables.json
 {{/if}}
     preconditions:
       - sh: "type jq &> /dev/null"
@@ -174,15 +180,16 @@ tasks:
       - task: update-readme
 
   _ansible-autodoc:
-    vars:
+    env:
       ACTIONS_DESCRIPTION:
         sh: jq -r '.autodoc_actions_description'
+      TMP:
+        sh: mktemp
     cmds:
-      - mod-ansible-autodoc --todo-title "### TODO" --actions-title "## Features" --actions-description "\{{.ACTIONS_DESCRIPTION}}"
+      - mod-ansible-autodoc --todo-title "### TODO" --actions-title "## Features" --actions-description "$ACTIONS_DESCRIPTION"
           --tags-title "### Tags" --variables-title "## Variables"
       - ROLE_VARIABLES="$(jq -r '.role_variables' ansible_variables.json)"
-      - TMP="$(mktemp)"
-      - jq --arg vars "${ROLE_VARIABLES}" '.role_variables = $vars' .variables > "$TMP"
+      - jq --arg vars "$ROLE_VARIABLES" '.role_variables = $vars' .variables.json > "$TMP"
       - mv "$TMP" .variables.json
     preconditions:
       - sh: "type mod-ansible-autodoc &> /dev/null"
@@ -190,11 +197,13 @@ tasks:
           `pip3 install -r requirements.txt` or running `bash .start.sh`."
 
   _ansibler:
+    env:
+      TMP:
+        sh: mktemp
     cmds:
       - ansibler
       - ROLE_DEPS="$(jq -r '.role_dependencies' dependency-chart.json)"
-      - TMP=$(mktemp)
-      - jq --arg deps "$ROLE_DEPS" '.role_dependencies = $deps' .variables.json
+      - jq --arg deps "$ROLE_DEPS" '.role_dependencies = $deps' .variables.json > "$TMP"
       - mv "$TMP" .variables.json
     preconditions:
       - sh: "type ansibler &> /dev/null"
@@ -205,7 +214,7 @@ tasks:
     vars:
       CONTRIB_TEMPLATE: .common/docs/blueprint-contributing.md
     cmds:
-      - readme generate --config .variables.json --input "$CONTRIB_TEMPLATE" --output CONTRIBUTING.md
+      - readme generate --config .variables.json --input "\{{.CONTRIB_TEMPLATE}}" --output CONTRIBUTING.md
       - task: _markdown-scrub
         vars:
           SCRUB_FILE: CONTRIBUTING.md
@@ -219,16 +228,19 @@ tasks:
         msg: "@appnest/readme is not installed globally. Install it by running `npm install -g @appnest/readme` or by running `bash .start.sh`."
 
   update-files:
-    vars:
+    env:
+      FILES
+        sh: find .common/files-\{{.REPOSITORY_SUBTYPE}}
       PKG_DEPS:
         sh: jq -r '.dependencies' package.json
       PKG_DEV_DEPS:
         sh: jq -r '.devDependencies' package.json
       PKG_VERSION:
         sh: jq -r '.version' package.json
+      TMP:
+        sh: mktemp
     cmds:
       - |
-        FILES="$(find .common/files-\{{.REPOSITORY_SUBTYPE}})"
         for FILE in "$FILES"; do
           if [ "${FILE##*.}" == 'hbs' ]; then
             hbs --data .variables.json "$FILE" --stdout > "$(dirname $FILE)/${FILE%.*}"
@@ -237,12 +249,11 @@ tasks:
       - rm -rf ".common/files-\{{.REPOSITORY_SUBTYPE}}/**.hbs"
       - rm -rf ".common/files-\{{.REPOSITORY_SUBTYPE}}/**/*.hbs"
       - rsync -aP ".common/files-\{{.REPOSITORY_SUBTYPE}}/" ./
-      - TMP="$(mktemp)"
       # The following command merges upstream package.json dependencies and devDependencies and overwrites them with the upstream versions.
       # It allows the package.json in each project to include whatever dependencies it needs while at the same time it allows all the
       # common dependencies to be updated at the same time. It also ensures the version is persistent. It is entirely possible that this
       # might cause issues if a project relies on an outdated dependency or if the upstream dependencies are out of date.
-      - jq -S --arg deps "\{{.PKG_DEPS}}" --arg devDeps "\{{.PKG_DEV_DEPS}}" --arg version "\{{.PKG_VERSION}}" \
+      - jq -S --arg deps "$PKG_DEPS" --arg devDeps "$PKG_DEV_DEPS" --arg version "$PKG_VERSION" \
           '.dependencies = (.dependencies + ($deps | fromjson)) | .devDependencies = (.devDependencies + ($devDeps | fromjson)) | .version = $version'
           package.json > "$TMP"
       - mv "$TMP" package.json
@@ -254,7 +265,7 @@ tasks:
 
   update-readme:
     vars:
-      README_TEMPLATE: "blueprint-readme{{#if hbs.ansible}}-\{{.REPOSITORY_SUBTYPE}}{{/if}}.md"
+      README_TEMPLATE: blueprint-readme{{#if hbs.ansible}}-\{{.REPOSITORY_SUBTYPE}}{{/if}}.md
     cmds:
       - readme generate --config .variables.json --input ".common/docs/\{{.README_TEMPLATE}}"
       - rm -f ansible_actions.md ansible_tags.md ansible_todo.md ansible_variables.md ansible_variables.json dependency-chart.json
@@ -277,10 +288,8 @@ tasks:
       REGEX: .*https://raw.githubusercontent.com/andreasbm/readme/master/assets/lines/.*.png)][(]\(.*\)[)]$
     cmds:
       - |
-        if [[ '{{OS}}' == 'darwin' ]]; then
-          sed -i .bak 's^\{{.REGEX}}^\{{.DIVIDER_SRC}}"></a>^g'\
-            \{{.SCRUB_FILE}} && rm \{{.SCRUB_FILE}}.bak
+        if [[ '\{{OS}}' == 'darwin' ]]; then
+          sed -i .bak 's^\{{.REGEX}}^\{{.DIVIDER_SRC}}"></a>^g' \{{.SCRUB_FILE}} && rm \{{.SCRUB_FILE}}.bak
         else
-          sed -i 's^\{{.REGEX}}^\{{.DIVIDER_SRC}}"></a>^g'
-            \{{.SCRUB_FILE}}
+          sed -i 's^\{{.REGEX}}^\{{.DIVIDER_SRC}}"></a>^g' \{{.SCRUB_FILE}}
         fi
