--- a/taskfiles/Taskfile-lint.yml.handlebars
+++ b/taskfiles/Taskfile-lint.yml.handlebars
@@ -8,7 +8,7 @@ tasks:
 {{#if hbs.ansible}}
 
   ansible:
-    deps: [symlink]
+    deps: [:ansible:symlink]
     desc: Lint Ansible projects using Ansible Lint
     cmds:
       - ansible-lint
@@ -32,9 +32,9 @@ tasks:
   docker:
     desc: Lint Dockerfiles using Hadolint (requires Docker)
     cmds:
-      - find . -type d \\( -name .cache -o -name .common -o -name .git -o -name .modules \
-        -o -name node_modules -o -name .husky -o -name .task -o -name test \\) -prune -o \
-        -type f \\( -name Dockerfile -o -name Dockerfile.j2 \\) -print0 | xargs -0 -r -n1 \
+      - find . -type d \( -name .cache -o -name .common -o -name .git -o -name .modules
+        -o -name node_modules -o -name .husky -o -name .task -o -name test \) -prune -o
+        -type f \( -name Dockerfile -o -name Dockerfile.j2 \) -print0 | xargs -0 -r -n1
         docker run -v "$PWD:/work" -w /work megabytelabs/hadolint:slim
     sources:
       - ./**Dockerfile
