--- a/taskfiles/Taskfile-common.yml.handlebars
+++ b/taskfiles/Taskfile-common.yml.handlebars
@@ -3,6 +3,9 @@ version: '3'
 
 tasks:
   commit:
+    vars:
+      TEST: you
+      PO: hey
     desc: Lint staged files, report spelling errors, and open a _required_ commit dialoge
     summary: |
       $ Commit code
