Update taskfiles/Taskfile-common.yml.handlebars Deleted taskfiles/Taskfile-docs.yml.handlebars

--- a/taskfiles/Taskfile-common.yml.handlebars
+++ b/taskfiles/Taskfile-common.yml.handlebars
@@ -109,7 +109,7 @@ tasks:
       WORKDIR:
         sh: basename $PWD
     cmds:
-      - docker run --cap-drop=ALL -it -v "${PWD}:/\{{.WORKDIR}}" -w /\{{.WORKDIR}} --rm megabytelabs/ansible-molecule-\{{.CLI_ARGS}}:latest /bin/bash
+      - docker run --cap-drop=ALL -it -v "$PWD:/\{{.WORKDIR}}" -w /\{{.WORKDIR}} --rm megabytelabs/ansible-molecule-\{{.CLI_ARGS}}:latest /bin/bash
     preconditions:
       - sh: "type docker &> /dev/null"
         msg: "Docker is not installed! Install it to use this feature."
