Update taskfiles/Taskfile-common.yml.handlebars, taskfiles/Taskfile-fix.yml.handlebars, taskfiles/Taskfile-lint.yml.handlebars files

--- a/taskfiles/Taskfile-fix.yml.handlebars
+++ b/taskfiles/Taskfile-fix.yml.handlebars
@@ -17,6 +17,9 @@ tasks:
     desc: Automatically format Python files using Black
     cmds:
       - black --exclude '\.cache/|.*\.cache/|\.common/|.*\.common/|.git/|.*\.git/|node_modules/|.*node_modules/|roles/' .
+    sources:
+      - **.py
+      - **/*.py
 {{/if}}
 
   scripts:
