--- a/taskfiles/Taskfile-fix.yml.handlebars
+++ b/taskfiles/Taskfile-fix.yml.handlebars
@@ -8,24 +8,24 @@ tasks:
     deps: [formatting, {{#if hbs.python}}python, {{/if}}scripts]
 
   formatting:
-    deps: [nodejs-dependencies]
+    deps: [:common:nodejs-dependencies]
     desc: Automatically format most files using Prettier
     cmds:
       - npm run fix:prettier
 {{#if hbs.python}}
 
   python:
-    deps: [python-requirements]
+    deps: [:common:python-requirements]
     desc: Automatically format Python files using Black
     cmds:
-      - black --exclude '\.cache/|.*\.cache/|\.common/|.*\.common/|.git/|.*\.git/|node_modules/|.*node_modules/|roles/' .
+      - black --exclude '\.cache/|.*\.cache/|\.common/|.*\.common/|.git/|.*\.git/|node_modules/|.*node_modules/|roles/|.*venv/' .
     sources:
       - ./*.py
       - ./**/*.py
 {{/if}}
 
   scripts:
-    deps: [nodejs-dependencies]
+    deps: [:common:nodejs-dependencies]
     desc: (Experimental) Automatically apply fixes to .sh files using Shellcheck
     cmds:
       - npm run fix:shellcheck
