Update taskfiles/Taskfile-common.yml.handlebars, taskfiles/Taskfile-linux.yml.handlebars, taskfiles/Taskfile-fix.yml.handlebars, taskfiles/Taskfile-lint.yml.handlebars, taskfiles/Taskfile-test.yml.handlebars files

--- a/taskfiles/Taskfile-lint.yml.handlebars
+++ b/taskfiles/Taskfile-lint.yml.handlebars
@@ -8,7 +8,9 @@ tasks:
 {{#if hbs.ansible}}
 
   ansible:
-    deps: [:ansible:symlink, :common:galaxy-requirements]
+    deps:
+      - task: ansible:symlink
+      - task: common:galaxy-requirements
     desc: Lint Ansible projects using Ansible Lint
     summary: |
       $ Lint an Ansible project using Ansible Lint
@@ -31,7 +33,8 @@ tasks:
 {{/if}}
 
   formatting:
-    deps: [:common:nodejs-dependencies]
+    deps:
+      - task: common:nodejs-dependencies
     desc: Lint formatting using Prettier
     summary: |
       $ Report formatting errors with Prettier
@@ -50,6 +53,8 @@ tasks:
 {{#if hbs.dockerfile}}
 
   docker:
+    deps:
+      - software:docker
     desc: Lint Dockerfiles using Hadolint (requires Docker)
     summary: |
       $ Lint Dockerfiles using Hadolint
@@ -82,12 +87,12 @@ tasks:
       - ./**/Dockerfile
       - ./Dockerfile.j2
       - ./**/Dockerfile.j2
-    method: checksum
 {{/if}}
 {{#if hbs.python}}
 
   python:
-    deps: [:common:python-requirements]
+    deps:
+      - task: common:python-requirements
     desc: Lint Python files using Flake8
     summary: |
       $ Lint Python files using Flake8
@@ -111,7 +116,8 @@ tasks:
 {{/if}}
 
   scripts:
-    deps: [:common:nodejs-dependencies]
+    deps:
+      - task: common:nodejs-dependencies
     desc: Report possible errors in shell scripts
     summary: |
       $ Report possible errors in shell scripts using Shellcheck
@@ -130,7 +136,8 @@ tasks:
 {{#if hbs.yaml}}
 
   yaml:
-    deps: [:common:python-requirements]
+    deps:
+      - task: common:python-requirements
     desc: Lint .yml files using YAML Lint
     summary: |
       $ Lint YML files using YAML Lint
