--- a/taskfiles/Taskfile-fix.yml.handlebars
+++ b/taskfiles/Taskfile-fix.yml.handlebars
@@ -8,7 +8,8 @@ tasks:
     deps: [formatting, {{#if hbs.python}}python, {{/if}}scripts]
 
   formatting:
-    deps: [:common:nodejs-dependencies]
+    deps:
+      - task: common:nodejs-dependencies
     desc: Automatically format most files using Prettier
     summary: |
       $ Automatically format most files using Prettier
@@ -27,7 +28,8 @@ tasks:
 {{#if hbs.python}}
 
   python:
-    deps: [:common:python-requirements]
+    deps:
+      - task: common:python-requirements
     desc: Automatically format Python files using Black
     summary: |
       $ Automatically format Python files using Black
@@ -48,7 +50,8 @@ tasks:
 {{/if}}
 
   scripts:
-    deps: [:common:nodejs-dependencies]
+    deps:
+      - task: common:nodejs-dependencies
     desc: (Experimental) Automatically apply fixes to .sh and .sh.j2 files using Shellcheck
     summary: |
       $ Automatically apply fixes to shell scripts using Shellcheck
