--- a/taskfiles/Taskfile-lint.yml.handlebars
+++ b/taskfiles/Taskfile-lint.yml.handlebars
@@ -28,8 +28,7 @@ tasks:
     cmds:
       - ansible-lint
     sources:
-      - ./*.yml
-      - ./**/*.yml
+      - **/*.yml
 {{/if}}
 
   formatting:
@@ -50,6 +49,8 @@ tasks:
       For more information on Prettier, see: https://prettier.io/
     cmds:
       - npm run lint:prettier
+    sources:
+      - **/*.(css|html|js|json|less|md|mjml|php|scss|sh|ts|xml|yml)
 {{#if hbs.dockerfile}}
 
   docker:
@@ -83,10 +84,7 @@ tasks:
         -prune -o -type f \( -name Dockerfile -o -name Dockerfile.j2 \) -print0 | xargs -0 -r -n1
         docker run -v "$PWD:/work" -w /work megabytelabs/hadolint:slim
     sources:
-      - ./Dockerfile
-      - ./**/Dockerfile
-      - ./Dockerfile.j2
-      - ./**/Dockerfile.j2
+      - **/(Dockerfile|Dockerfile.j2)
 {{/if}}
 {{#if hbs.python}}
 
@@ -113,6 +111,8 @@ tasks:
       For more information on Flake8, see: https://github.com/PyCQA/flake8
     cmds:
       - flake8 .
+    sources:
+      - **/*.py
 {{/if}}
 
   scripts:
@@ -133,6 +133,8 @@ tasks:
       For more information on Shellcheck, see: https://github.com/koalaman/shellcheck
     cmds:
       - npm run fix:shellcheck
+    sources:
+      - **/*.(sh|sh.j2)
 {{#if hbs.yaml}}
 
   yaml:
@@ -156,6 +158,5 @@ tasks:
     cmds:
       - yamllint -s .
     sources:
-      - ./*.yml
-      - ./**/*.yml
+      - **/*.yml
 {{/if}}
