--- a/taskfiles/Taskfile-fix.yml.handlebars
+++ b/taskfiles/Taskfile-fix.yml.handlebars
@@ -25,6 +25,8 @@ tasks:
       For more information on Prettier, see: https://prettier.io/
     cmds:
       - npm run fix:prettier
+    sources:
+      - **/*.(css|html|js|json|less|md|mjml|php|scss|sh|ts|xml|yml)
 {{#if hbs.python}}
 
   python:
@@ -45,8 +47,7 @@ tasks:
     cmds:
       - black --exclude '\.cache/|.*\.cache/|\.common/|.*\.common/|.git/|.*\.git/|node_modules/|.*node_modules/|roles/|.*venv/' .
     sources:
-      - ./*.py
-      - ./**/*.py
+      - **/*.py
 {{/if}}
 
   scripts:
@@ -62,7 +63,7 @@ tasks:
       that end with .sh or .sh.j2 files that are NOT in the following folders:
         * .cache        * .husky
         * .git          * node_modules
-        * .husky.       * slim_test
+        * .husky        * slim_test
 
       This task is experimental. It may work to get rid of the Shellcheck lint errors but the code
       should still be tested since it might break things. Ideally, you should apply Shellcheck's
@@ -78,3 +79,5 @@ tasks:
       For more information on Shellcheck, see: https://github.com/koalaman/shellcheck
     cmds:
       - npm run fix:shellcheck
+    sources:
+      - **/*.(sh|sh.j2)
