--- a/taskfiles/Taskfile-common.yml.handlebars
+++ b/taskfiles/Taskfile-common.yml.handlebars
@@ -355,7 +355,7 @@ tasks:
             hbs --data .variables.json "$FILE" --stdout > "$(dirname $FILE)/${FILE_BASENAME%.*}"
           fi
         done
-      - rm -rf ".common/files-\{{.REPOSITORY_SUBTYPE}}/**/*.handlebars"
+      - find .common/files-{{.REPOSITORY_SUBTYPE}} -type f -name "*.handlebars" -delete
       - rsync -aP ".common/files-\{{.REPOSITORY_SUBTYPE}}/" ./
       # The following command merges upstream package.json dependencies and devDependencies and overwrites them with the upstream versions.
       # It allows the package.json in each project to include whatever dependencies it needs while at the same time it allows all the
