--- a/taskfiles/Taskfile-common.yml.handlebars
+++ b/taskfiles/Taskfile-common.yml.handlebars
@@ -206,7 +206,7 @@ tasks:
       - task: requirements
       - task: update-variables
       - task: update-all
-      - . .common/scripts/log.sh
+      - . .common/scripts/log-min.sh
       - success "Successfully updated the project with the latest upstream changes"
 
   update-variables:
