--- a/taskfiles/Taskfile-common.yml.handlebars
+++ b/taskfiles/Taskfile-common.yml.handlebars
@@ -203,6 +203,7 @@ tasks:
     desc: Refresh the project with the latest upstream code and ensure blueprint data has propagated
     cmds:
       - cp ./.common/.start.sh .start.sh
+      - if [ ! -f .variables.json ]; then echo '{}' > .variables.json; fi
       - task: requirements
       - task: update-variables
       - task: update-all
