--- a/taskfiles/Taskfile-common.yml.handlebars
+++ b/taskfiles/Taskfile-common.yml.handlebars
@@ -105,7 +105,7 @@ tasks:
   hard-reset:
     deps:
       - software:git
-    desc: Aggressively reset the project (WARNING: This will wipe uncommitted work)
+    desc: "Aggressively reset the project (WARNING: This will wipe uncommitted work)"
     summary: |
       $ Aggressively reset the project
 
