Update taskfiles/Taskfile-common.yml.handlebars, taskfiles/Taskfile-test.yml.handlebars, scripts/virtualization-platform.js files

--- a/taskfiles/Taskfile-common.yml.handlebars
+++ b/taskfiles/Taskfile-common.yml.handlebars
@@ -218,7 +218,7 @@ tasks:
       > task shell -- ubuntu-21.04
 
       Available operating systems:
-        * archlinux.  * debian-9     * fedora-34      * ubuntu-21.04
+        * archlinux   * debian-9     * fedora-34      * ubuntu-21.04
         * centos-7    * debian-10    * ubuntu-18.04
         * centos-8    * fedora-33    * ubuntu-20.04
     vars:
