Update taskfiles/Taskfile-security.yml.handlebars, taskfiles/Taskfile-common.yml.handlebars, taskfiles/Taskfile-linux.yml.handlebars, taskfiles/Taskfile-darwin.yml.handlebars files

--- a/taskfiles/Taskfile-darwin.yml.handlebars
+++ b/taskfiles/Taskfile-darwin.yml.handlebars
@@ -71,6 +71,14 @@ tasks:
     status:
       - type rsync &> /dev/null
 
+  trivy:
+    cmds:
+      - task: install-doctor
+        vars:
+          SOFTWARE: trivy
+    status:
+      - type trivy &> /dev/null
+
   vagrant:
     cmds:
       - task: install-doctor
