--- a/taskfiles/Taskfile-common.yml.handlebars
+++ b/taskfiles/Taskfile-common.yml.handlebars
@@ -165,57 +165,57 @@ tasks:
         msg: "The package.json file appears to be missing!"
 
   nodejs-global-dependencies:
-    deps: [npm-hbs, npm-prettier, npm-prettier-package-json, npm-readme]
+    deps: [npm-hbs, npm-prettier, npm-prettier-package-json, npm-readme{{#if hbs.dockerfile}}, snyk{{/if}}]
     status:
       - '[[ "${container:=}" == "docker" ]]'
 
-  npm-hbs:
+  npm-install:
     deps:
       - :software:node
     cmds:
       - |
         if [ "${container:=}" != 'docker' ]; then
-          bash .common/log info "Running `npm install -g hbs-cli`"
-          npm install -g hbs-cli
+          bash .common/log info "Running `npm install -g \{{.NPM_PACKAGE}}`"
+          npm install -g \{{.NPM_PACKAGE}}
+          bash .common/log success "`The npm \{{.NPM_PACKAGE}}` package is globally installed"
         fi
     status:
-      - type hbs &> /dev/null
+      - type \{{.NPM_PACKAGE_BIN}} &> /dev/null
+
+  npm-hbs:
+    cmds:
+      - task: npm-install
+        vars:
+          NPM_PACKAGE: hbs-cli
+          NPM_PACKAGE_BIN: hbs
 
   npm-prettier:
-    deps:
-      - :software:node
     cmds:
-      - |
-        if [ "${container:=}" != 'docker' ]; then
-          bash .common/log info "Installing Prettier and supporting plugins globally with `npm install -g`"
-          npm install -g prettier prettier-plugin-sh @megabytelabs/prettier-config{{#if hbs.ansible}} @megabytelabs/prettier-config-ansible{{/if}}
-        fi
-    status:
-      - type prettier &> /dev/null
+      - task: npm-install
+        vars:
+          NPM_PACKAGE: prettier
+          NPM_PACKAGE_BIN: prettier
 
   npm-prettier-package-json:
-    deps:
-      - :software:node
     cmds:
-      - |
-        if [ "${container:=}" != 'docker' ]; then
-          bash .common/log info "Running `npm install -g prettier-package-json`"
-          npm install -g prettier-package-json
-        fi
-    status:
-      - type prettier-package-json &> /dev/null
+      - task: npm-install
+        vars:
+          NPM_PACKAGE: prettier-package-json
+          NPM_PACKAGE_BIN: prettier-package-json
 
   npm-readme:
-    deps:
-      - :software:node
     cmds:
-      - |
-        if [ "${container:=}" != 'docker' ]; then
-          bash .common/log info "Running `npm install -g @appnest/readme`"
-          npm install -g @appnest/readme
-        fi
-    status:
-      - type readme &> /dev/null
+      - task: npm-install
+        vars:
+          NPM_PACKAGE: @appnest/readme
+          NPM_PACKAGE_BIN: readme
+
+  npm-snyk:
+    cmds:
+      - task: npm-install
+        vars:
+          NPM_PACKAGE: snyk
+          NPM_PACKAGE_BIN: snyk
 
   python-requirements:
     deps:
