--- a/taskfiles/Taskfile-security.yml.handlebars
+++ b/taskfiles/Taskfile-security.yml.handlebars
@@ -37,9 +37,11 @@ tasks:
         sh: jq -r '.slug' .variables.json
     cmds:
       - task: snyk-login
-      - bash .common/log info "Testing {{profile.dockerhub}}/\{{.DOCKER_IMAGE}}:latest for vulnerabilities with Snyk"
+      - bash .common/log info "Scanning {{profile.dockerhub}}/\{{.DOCKER_IMAGE}}:latest for vulnerabilities with Snyk"
+      - bash .common/log log "Running `snyk test --docker {{profile.dockerhub}}/\{{.DOCKER_IMAGE}}:latest --file=Dockerfile`"
       - snyk test --docker {{profile.dockerhub}}/\{{.DOCKER_IMAGE}}:latest --file=Dockerfile
-      - bash .common/log info "Testing {{profile.dockerhub}}/\{{.DOCKER_IMAGE}}:slim for vulnerabilities with Snyk"
+      - bash .common/log info "Scanning {{profile.dockerhub}}/\{{.DOCKER_IMAGE}}:slim for vulnerabilities with Snyk"
+      - bash .common/log log "Running `snyk test --docker {{profile.dockerhub}}/\{{.DOCKER_IMAGE}}:slim --file=Dockerfile`"
       - snyk test --docker {{profile.dockerhub}}/\{{.DOCKER_IMAGE}}:slim --file=Dockerfile
 
   trivy:
@@ -59,9 +61,11 @@ tasks:
       DOCKER_IMAGE:
         sh: jq -r '.slug' .variables.json
     cmds:
-      - bash .common/log info "Testing `{{profile.dockerhub}}/\{{.DOCKER_IMAGE}}:latest` for vulnerabilities with Trivy"
+      - bash .common/log info "Scanning `{{profile.dockerhub}}/\{{.DOCKER_IMAGE}}:latest` for vulnerabilities with Trivy"
+      - bash .common/log log "Running `trivy image {{profile.dockerhub}}/\{{.DOCKER_IMAGE}}:latest`"
       - trivy image {{profile.dockerhub}}/\{{.DOCKER_IMAGE}}:latest
-      - bash .common/log info "Testing `{{profile.dockerhub}}/\{{.DOCKER_IMAGE}}:slim` for vulnerabilities with Trivy"
+      - bash .common/log info "Scanning `{{profile.dockerhub}}/\{{.DOCKER_IMAGE}}:slim` for vulnerabilities with Trivy"
+      - bash .common/log log "Running `trivy image {{profile.dockerhub}}/\{{.DOCKER_IMAGE}}:slim`"
       - trivy image {{profile.dockerhub}}/\{{.DOCKER_IMAGE}}:slim
 
 {{/if}}
