--- a/taskfiles/Taskfile-common.yml.handlebars
+++ b/taskfiles/Taskfile-common.yml.handlebars
@@ -209,7 +209,7 @@ tasks:
     cmds:
       - task: npm-install
         vars:
-          NPM_PACKAGE: @appnest/readme
+          NPM_PACKAGE: '@appnest/readme'
           NPM_PACKAGE_BIN: readme
 
   npm-snyk:
